--- a/AdvR/hadley_Radv.rmd
+++ b/AdvR/hadley_Radv.rmd
@@ -476,7 +476,7 @@ str.function=function(f){
 ######################
 ###Delayed bindings
 library(pryr)
-system.time(b %<d-% {Sys.sleep(1); 1})
+system.time(b %<d-% {Sys.sleep(1); 1}) #delayed binding
 system.time(b)
 
 ##Active bindings
@@ -484,7 +484,7 @@ x %<a-% runif(1)
 x
 x #different
 
-###Rebind
+###Rebind #bind value to name if name exists else search upwards
 rebind <- function(name, value, env = parent.frame()) {
   if (identical(env, emptyenv())) {
     stop("Can't find ", name, call. = FALSE)
@@ -2503,9 +2503,25 @@ subscramble <- function(x, condition) {
 ##Base R functions tend to use a different sort of escape hatch. They often have an argument that turns off NSE. For example, require() has character.only = TRUE.
 ##But this may make function calls harder to understand
 
+#############################################################################
+##Important thing about scope of when using substitute to capture promises###
+#############################################################################
 ##Another way of subscramble:
-capCon<-function(con){
-  substitute(con)
+capCon<-function(...){
+  substitute(...)
+}
+subset2_q<-function(df,con){
+  r<-eval(con,df,parent.frame()) #to get what con really is ,envir should be parent call
+  df[r,]
+}
+subscramble <- function(x, ...) {
+  scramble(subset2_q(x, capCon(...)))
+}
+subscramble(sample_df, a >= 4)
+
+#BUT! Use capCon<-function(con){  substitute(con)} will fail:
+capCon<-function(condition){
+  substitute(condition)
 }
 subset2_q<-function(df,con){
   r<-eval(con,df,parent.frame()) #to get what con really is ,envir should be parent call
@@ -2514,8 +2530,45 @@ subset2_q<-function(df,con){
 subscramble <- function(x, condition) {
   scramble(subset2_q(x, capCon(condition)))
 }
+subscramble(sample_df, a >= 4) #Failed
+###这里capCon里的substitue的scope是capCon而不是调用capCon的函数,故而subset2_q eval parent.frame时并不在capCon内,而应该是capCon的parent.frame()
+###因此,应该用capCon<-function(condiciton){substitute(condition, parent.frame())}:
+capCon<-function(condition){
+  substitute(condition,parent.frame())
+}
 subscramble(sample_df, a >= 4)
-#NOT WORKING!!!
+###这里subset2_q和capCon都用parent.frame,因此,连用时scope一致了,这部分可能换成env参数可调为最合适
+capCon<-function(condition,env=parent.frame()){
+  substitute(condition,env)
+}
+subset2_q<-function(df,con,env=parent.frame()){
+  r<-eval(con,df,env) #to get what con really is ,envir should be parent call
+  df[r,]
+}
+subscramble <- function(x, condition,env=parent.frame()) {
+  scramble(subset2_q(x,capCon(condition)))
+}
+outlayer=function(x,con){
+  #env=parent.frame()
+  subscramble(x,con)
+}
+outlayer(sample_df,a>=4) #con not found!
+#we cannot capture condition and pass it to inner func properly in this way.so :
+##Better turn off the capture of promises and use all safe hatches for inner functions!!
+subset2_q<-function(df,con,env=parent.frame()){
+  r<-eval(con,df,env) #to get what con really is ,envir should be parent call
+  df[r,]
+}
+subscramble <- function(x, condition,env=parent.frame()) {
+  print(condition)
+  scramble(subset2_q(x,condition,env))
+}
+outlayer=function(x,con){
+  subscramble(x,substitute(con),env=parent.frame())
+}
+outlayer(sample_df,a>=4)
+
+
 
 ###Exercise1: The following R functions all use NSE. For each, describe how it uses NSE, and read the documentation to determine its escape hatch.
 # rm()  
@@ -2569,7 +2622,8 @@ mutate=function(.data,...){
   cols=capDots(...)
   mutate_p(.data,cols)
 }
-
+sample_df <- data.frame(a = 1:5, b = 5:1, c = c(5, 3, 1, 4, 1))
+mutate(sample_df,a=a-1)
 ###??Exercise4: What’s the escape hatch for ggplot2::aes()? What about plyr::()? What do they have in common? What are the advantages and disadvantages of their differences?
 
 
@@ -2578,7 +2632,17 @@ subset2_q <- function(x, cond, env = parent.frame()) {
   r <- eval(cond, x, env)
   x[r, ]
 }
-
+c=3
+subset2_q(sample_df,substitute(a>=c)) 
+e=new.env()
+e$c=4
+eval(expression(c),e) ##check c value in e
+subset2_q(sample_df,expression(a>=c),env=e) 
+#####IMPORTANT!!!!
+###这里的a,c 被当成是sample_df的column了!!!!
+e$d=4
+subset2_q(sample_df,expression(a>=d),env=e) 
+####Answer, this is why add env parameter to subset2_q is useful!
 
 ```
 
